[project]
name = "dataplor-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=1.24.0",
    "openpyxl>=3.1.5",
    "pandas>=2.0.0",
    "polars>=1.43.0",
    "pyarrow>=25.0.0",
    "pydantic>=2.13.4",
    "rapidfuzz>=3.0.0",
    "scikit-learn>=1.2.0",
    "unidecode>=1.3.6",
]

